# cuda

./: .gitignore  README.md
exercise_1/: gpu_info.cu
exercise_10_1/: CMakeLists.txt  vecdot.cpp  vecdot_measurements.md
exercise_10_2/: CMakeLists.txt  matmul.cpp  matmul_measurments.md
exercise_11/: power_iteration.jl  power_iteration.md
exercise_1_2/: vectoradd.cu
exercise_2/: vectoradd.cu
exercise_2_1/: exercise_2_1.md  syncthreads.cu
exercise_2_2/: cos.cu  cos.txt  exercise_2_2.md
exercise_2_3/: Makefile  heat_stencil.md  heat_stencil_cuda.cu  heat_stencil_omp.c
exercise_3/: Makefile  barchart.py  exercise_efficiency.cu  exercise_efficiency.md
exercise_4_1/: Makefile  vector.cu  vector_debug.md
exercise_4_2/: Makefile  syncthreads_debug.md
exercise_4_3/: Makefile  stencil.cu  stencil_debug.md
exercise_5_1/: Makefile  matmul.cu
exercise_5_2/: Makefile  fft.cu
exercise_6/: Makefile  exercise-multiplegpu.cu  exercise_multiplegpu.md
exercise_7/: Makefile  mandelbrot-dyn.cu  mandelbrot.cu  mandelbrot_dyn.md
exercise_8_1/: Makefile  exercise_advanced_einkemmer.cu  exercise_advanced_einkemmer.md  job
exercise_8_2/: Makefile  job  matmul.cu  matmul_measure.md
exercise_9_1/: CMakeLists.txt  vecadd.cpp  vecadd_measurements.md
